--- a/Site Facima/index.html
+++ b/Site Facima/index.html
@@ -61,16 +61,21 @@
 	  <!-- conteudoprincipal -->
 	  <div id="flex-container">
 	<section class="left-column"><!-- COLUNA ESQUERDA -->
-		<h1>Informações importantes</h1>
+		<h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc facilisis maximus dapibus. Aliquam tempor eu elit at aliquam. Nam vel orci dolor. Fusce semper eleifend neque, sit amet aliquam est imperdiet at.</h1>
 	</section>
 	<section class="center-column"><!-- COLUNA CENTRO -->
-		<h1>Cursos mais procurados e diferenciados da faculdade</h1>
+		<h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc facilisis maximus dapibus. Aliquam tempor eu elit at aliquam. Nam vel orci dolor. Fusce semper eleifend neque, sit amet aliquam est imperdiet at.</h1>
 	</section>
 	<section class="right-column">
-		<h1>Outras Informações</h1><!-- COLUNA DIREITA -->
+		<h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc facilisis maximus dapibus. Aliquam tempor eu elit at aliquam. Nam vel orci dolor. Fusce semper eleifend neque, sit amet aliquam est imperdiet at.</h1>
+		<!-- COLUNA DIREITA -->
 	</section>
 </div>
 	  <!-- fim conteudoprincipal -->
+	  <!-- enfeite -->
+	  <div class="livro"><img src="Imagens/pilha-livros-2.png" width="126" height="455" alt=""/>
+	  </div>
+	  <!--fim enfeite -->
      </div>
 	<!-- fim fundo com informações -->
 </div>
