--- a/Site Facima/index.html
+++ b/Site Facima/index.html
@@ -6,6 +6,7 @@
  
   
 	<link rel="stylesheet" href="css/index.css">
+	<script type="text/javascript" src="javascript/index.js"></script>
 </head>
 
 <body>
@@ -15,23 +16,23 @@
   <div class="Back2">
 	  <!-- imagem facima -->
     <div class="img_header"> 
-  <span class="img_header"><a href="index.html"><img src="Imagens/facima icone.png" alt="" width="203" height="120"/></a></span>
+  <span  class="img_header"><a href="index.html"><img src="Imagens/facima icone.png" alt="Facima logotipo" width="203" height="120"/></a></span>
     </div>
 	  <!-- telefone -->
     <div class="telefone">
-	  <img src="Imagens/telefone-icon.png" width="60" height="60" alt=""/> 
+	  <img src="Imagens/telefone-icon.png" width="60" height="60" alt="Telefone"/> 
 	  <h1 class="telefone_numero">(82)3214-2800</h1>
     </div>
 	  <!-- fim telefone -->
 	  <!-- redes sociais -->
     <div class="redes_sociais">
 		  <!--facebook -->
-      <div id="facebook_conteudo"><a href ="https://www.facebook.com/soufacima/"><img src="Imagens/icon-facebook.png" width="40" height="40" alt=""/>
+      <div id="facebook_conteudo"><a href ="https://www.facebook.com/soufacima/"><img src="Imagens/icon-facebook.png" width="40" height="40" alt="Facebook"/>
 		  <h2 id="facebook">/soufacima</h2>
       </a></div>
 	    <!--fim facebook -->
 	    <!--instagram -->
-      <div id="instagram_conteudo"><a href ="https://www.instagram.com/facimaoficial/"><img src="Imagens/insta-icon.png" width="55" height="55" alt=""/>
+      <div id="instagram_conteudo"><a href ="https://www.instagram.com/facimaoficial/"><img src="Imagens/insta-icon.png" width="55" height="55" alt="Instagram"/>
 		  <h2 id="instagram">@facimaoficial</h2>
       </a></div>
 	    <h3>
@@ -43,37 +44,72 @@
 	    <!-- central do aluno -->
     </h3>
 	  <div class="central_aluno">
-	    <h3><a href="http://sistemasead.unip.br/centralaluno/index.aspx?instituto=facima"><img src="Imagens/layout site facima-Ronaldo.png" width="279" height="114" alt=""/></a>
+	    <h3><a href="http://sistemasead.unip.br/centralaluno/index.aspx?instituto=facima"><img src="Imagens/layout site facima-Ronaldo.png" width="279" height="114" alt="Central do aluno"/></a>
         </h3>
       </div>
 	    <!-- fim central do aluno-->
 	  <!-- menu -->
 	  <div class="menu">
 	  <ul>
-  <li><a href="#">Início</a></li>
-  <li><a href="#">Cursos</a></li>
-  <li><a href="#">Informes</a></li>
-  <li><a href="#">Aluno</a></li>
-  <li><a href="#">Serviços Online</a></li>
+  <li><a href="index.html">Início</a></li>
+  <li class="dropdown">
+    <a href="#" class="dropbtn" onclick="Mudarestado('Div')">Cursos</a>
+    <div class="dropdown-content" id="Div">
+      <a href="#">Link 1</a>
+      <a href="#">Link 2</a>
+      <a href="#">Link 3</a>
+    </div>
+  </li>
+  <li class="dropdown">
+    <a href="#" class="dropbtn" onclick="Mudarestado('Div2')">Informes</a>
+    <div class="dropdown-content" id="Div2">
+      <a href="#">Link 1</a>
+      <a href="#">Link 2</a>
+      <a href="#">Link 3</a>
+    </div>
+  </li>
+  <li class="dropdown">
+    <a href="#" class="dropbtn" onclick="Mudarestado('Div3')">Aluno</a>
+    <div class="dropdown-content" id="Div3">
+      <a href="#">Link 1</a>
+      <a href="#">Link 2</a>
+      <a href="#">Link 3</a>
+    </div>
+  </li>
+  <li class="dropdown">
+    <a href="#" class="dropbtn" onclick="Mudarestado('Div4')">Serviços Online</a>
+    <div class="dropdown-content" id="Div4">
+      <a href="#">Link 1</a>
+      <a href="#">Link 2</a>
+      <a href="#">Link 3</a>
+    </div>
+  </li>
 	  </ul>
 	  </div>
 	  <!-- fim menu -->
 	  <!-- conteudoprincipal -->
 	  <div id="flex-container">
 	<section class="left-column"><!-- COLUNA ESQUERDA -->
-		<h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc facilisis maximus dapibus. Aliquam tempor eu elit at aliquam. Nam vel orci dolor. Fusce semper eleifend neque, sit amet aliquam est imperdiet at.</h1>
+		<h1>Destaques</h1>
+		<h1>Foi aprovado?</h1>
+		<a href="http://www.facima.edu.br/vestibular/aprovados/index.asp"><h3>Matricule-se aqui!</h3></a>
+		<br>
+		<a href="#"><h3>Calendário Escolar</h3></a>
+		
+        <a href="http://www.facima.edu.br/instituto/destaques.asp#minicursos"><h3>Minicursos - Baixar Certificados!</h3></a><a href="http://www.facima.edu.br/instituto/eventos.asp"><h3>Eventos</h3></a>
 	</section>
 	<section class="center-column"><!-- COLUNA CENTRO -->
-		<h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc facilisis maximus dapibus. Aliquam tempor eu elit at aliquam. Nam vel orci dolor. Fusce semper eleifend neque, sit amet aliquam est imperdiet at.</h1>
+		<a href="#"><h1>Conheça o campus</h1></a>
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3933.825652749558!2d-35.741703485660786!3d-9.610276093118992!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x701485a9e58a9dd%3A0x309b91709c70814a!2sFaculdade+da+Cidade+de+Macei%C3%B3+-+FACIMA!5e0!3m2!1spt-BR!2sbr!4v1520981096426" width="300" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
 	</section>
 	<section class="right-column">
 		<h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc facilisis maximus dapibus. Aliquam tempor eu elit at aliquam. Nam vel orci dolor. Fusce semper eleifend neque, sit amet aliquam est imperdiet at.</h1>
 		<!-- COLUNA DIREITA -->
 	</section>
 </div>
-	  <!-- fim conteudoprincipal -->
+	  <!-- fim conteudo principal -->
 	  <!-- enfeite -->
-	  <div class="livro"><img src="Imagens/pilha-livros-2.png" width="126" height="455" alt=""/>
+	  <div class="livro"><img src="Imagens/pilha-livros-2.png" width="126" height="455" alt="Pilha de livros"/>
 	  </div>
 	  <!--fim enfeite -->
      </div>
