--- a/Site Facima/index.html
+++ b/Site Facima/index.html
@@ -2,11 +2,10 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Facima index</title>
+<title>Facima Início</title>
  
   
 	<link rel="stylesheet" href="css/index.css">
-	<script type="text/javascript" src="javascript/index.js"></script>
 </head>
 
 <body>
@@ -44,7 +43,7 @@
 	    <!-- central do aluno -->
     </h3>
 	  <div class="central_aluno">
-	    <h3><a href="http://sistemasead.unip.br/centralaluno/index.aspx?instituto=facima"><img src="Imagens/layout site facima-Ronaldo.png" width="279" height="114" alt="Central do aluno"/></a>
+	    <h3><a href="http://sistemasead.unip.br/centralaluno/index.aspx?instituto=facima"><img src="Imagens/layout site facima-Ronaldo.png" width="279" height="114" alt="imagem acesso ao sistema com link para Central do aluno"/></a>
         </h3>
       </div>
 	    <!-- fim central do aluno-->
@@ -53,35 +52,35 @@
 	  <ul>
   <li><a href="index.html">Início</a></li>
   <li class="dropdown">
-    <a href="#" class="dropbtn" onclick="Mudarestado('Div')">Cursos</a>
-    <div class="dropdown-content" id="Div">
-      <a href="#">Link 1</a>
-      <a href="#">Link 2</a>
-      <a href="#">Link 3</a>
+    <a href="cursos.html" class="dropbtn">Cursos</a>
+    <div class="dropdown-content">
+      <a href="#">Cursos tradicionais</a>
+      <a href="#">Cursos da area de tecnologia</a>
+      <a href="#">Pós-graduações</a>
     </div>
   </li>
   <li class="dropdown">
-    <a href="#" class="dropbtn" onclick="Mudarestado('Div2')">Informes</a>
-    <div class="dropdown-content" id="Div2">
-      <a href="#">Link 1</a>
-      <a href="#">Link 2</a>
-      <a href="#">Link 3</a>
+    <a href="informes.html" class="dropbtn">Informes</a>
+    <div class="dropdown-content">
+      <a href="#">Campus</a>
+      <a href="#">Apresentação sobre a facima</a>
+      <a href="#">Parceiros</a>
     </div>
   </li>
   <li class="dropdown">
-    <a href="#" class="dropbtn" onclick="Mudarestado('Div3')">Aluno</a>
-    <div class="dropdown-content" id="Div3">
-      <a href="#">Link 1</a>
-      <a href="#">Link 2</a>
-      <a href="#">Link 3</a>
+    <a href="aluno.html" class="dropbtn" >Aluno</a>
+    <div class="dropdown-content" >
+      <a href="#">Atividades de cursos</a>
+      <a href="http://www.unip.br/ead">EAD - Ensino a distância</a>
+      <a href="#">Estágios</a>
     </div>
   </li>
   <li class="dropdown">
-    <a href="#" class="dropbtn" onclick="Mudarestado('Div4')">Serviços Online</a>
-    <div class="dropdown-content" id="Div4">
-      <a href="#">Link 1</a>
-      <a href="#">Link 2</a>
-      <a href="#">Link 3</a>
+    <a href="serviços online.html" class="dropbtn" >Serviços Online</a>
+    <div class="dropdown-content" >
+      <a href="#">Biblioteca online</a>
+      <a href="http://sistemasead.unip.br/centralaluno/index.aspx?instituto=facima">Central do aluno</a>
+      <a href="#">Central do professor</a>
     </div>
   </li>
 	  </ul>
@@ -96,14 +95,19 @@
 		<br>
 		<a href="#"><h3>Calendário Escolar</h3></a>
 		
-        <a href="http://www.facima.edu.br/instituto/destaques.asp#minicursos"><h3>Minicursos - Baixar Certificados!</h3></a><a href="http://www.facima.edu.br/instituto/eventos.asp"><h3>Eventos</h3></a>
+        <a href="#"><h3>Minicursos - Baixar Certificados!</h3></a><a href="http://www.facima.edu.br/instituto/eventos.asp"><h3>Eventos</h3></a>
 	</section>
 	<section class="center-column"><!-- COLUNA CENTRO -->
 		<a href="#"><h1>Conheça o campus</h1></a>
 		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3933.825652749558!2d-35.741703485660786!3d-9.610276093118992!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x701485a9e58a9dd%3A0x309b91709c70814a!2sFaculdade+da+Cidade+de+Macei%C3%B3+-+FACIMA!5e0!3m2!1spt-BR!2sbr!4v1520981096426" width="300" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
 	</section>
 	<section class="right-column">
-		<h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc facilisis maximus dapibus. Aliquam tempor eu elit at aliquam. Nam vel orci dolor. Fusce semper eleifend neque, sit amet aliquam est imperdiet at.</h1>
+		<h1>Atividades de cursos</h1>
+		<br>
+		<a href="#"><h3>AC - Atividades complementares</h3></a>
+		<a href="#"><h3>APS - Atividades praticas supervisionadas</h3></a>
+		<a href="#"><h3>ED - Estudos disciplinares</h3></a>
+		<a href="http://www.unip.br/ead"><h3>EAD - Campo de ensino a distância</h3></a>
 		<!-- COLUNA DIREITA -->
 	</section>
 </div>
