--- a/Site Facima/cursos.html
+++ b/Site Facima/cursos.html
@@ -55,7 +55,7 @@
   <li class="dropdown">
     <a href="cursos.html" class="dropbtn">Cursos</a>
     <div class="dropdown-content">
-      <a href="#">Cursos tradicionais</a>
+      <a href="sub-menu/cursos tradicionais.html">Cursos tradicionais</a>
       <a href="#">Cursos da area de tecnologia</a>
       <a href="#">Pós-graduações</a>
     </div>
@@ -93,7 +93,7 @@
 	  <!-- conteudoprincipal -->
 	  <div id="flex-container">
 	<section class="left-column"><!-- COLUNA ESQUERDA -->
-		<a href="#"><h1>Cursos tradicionais</h1></a>
+		<a href="sub-menu/cursos tradicionais.html"><h1>Cursos tradicionais</h1></a>
 	</section>
 	<section class="center-column"><!-- COLUNA CENTRO -->
 		<a href="#"><h1>Cusos da area de tecnologia</h1></a>
