--- a/Site Facima/informes.html
+++ b/Site Facima/informes.html
@@ -55,7 +55,7 @@
   <li class="dropdown">
     <a href="cursos.html" class="dropbtn">Cursos</a>
     <div class="dropdown-content">
-      <a href="#">Cursos tradicionais</a>
+      <a href="sub-menu/cursos tradicionais.html">Cursos tradicionais</a>
       <a href="#">Cursos da area de tecnologia</a>
       <a href="#">Pós-graduações</a>
     </div>
