--- a/Site Facima/sub-menu/cursos tradicionais.html
+++ b/Site Facima/sub-menu/cursos tradicionais.html
@@ -5,7 +5,7 @@
 <title>Facima Cursos tradicionais</title>
  
   
-	<link rel="stylesheet" href="../css/index.css">
+	<link href="../css/sub-menus.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -54,7 +54,7 @@
   <li class="dropdown">
     <a href="../cursos.html" class="dropbtn">Cursos</a>
     <div class="dropdown-content">
-      <a href="#">Cursos tradicionais</a>
+      <a href="cursos tradicionais.html">Cursos tradicionais</a>
       <a href="#">Cursos da area de tecnologia</a>
       <a href="#">Pós-graduações</a>
     </div>
@@ -86,30 +86,15 @@
 	  </ul>
 	  </div>
 	  <!-- fim menu -->
+	  <!-- informante de pagina -->
+	  <div class="cursos_tradicionais"><a href="cursos tradicionais.html"><h1>Cursos tradicionais</h1></a></div>
 	  <!-- conteudoprincipal -->
 	  <div id="flex-container">
-	<section class="left-column"><!-- COLUNA ESQUERDA -->
-		<h1>Destaques</h1>
-		<h1>Foi aprovado?</h1>
-		<a href="http://www.facima.edu.br/vestibular/aprovados/index.asp"><h3>Matricule-se aqui!</h3></a>
-		<br>
-		<a href="#"><h3>Calendário Escolar</h3></a>
-		
-        <a href="#"><h3>Minicursos - Baixar Certificados!</h3></a><a href="http://www.facima.edu.br/instituto/eventos.asp"><h3>Eventos</h3></a>
-	</section>
+	
 	<section class="center-column"><!-- COLUNA CENTRO -->
-		<a href="#"><h1>Conheça o campus</h1></a>
-		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3933.825652749558!2d-35.741703485660786!3d-9.610276093118992!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x701485a9e58a9dd%3A0x309b91709c70814a!2sFaculdade+da+Cidade+de+Macei%C3%B3+-+FACIMA!5e0!3m2!1spt-BR!2sbr!4v1520981096426" width="300" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+		<h3>fgggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggh</h3>
 	</section>
-	<section class="right-column">
-		<h1>Atividades de cursos</h1>
-		<br>
-		<a href="#"><h3>AC - Atividades complementares</h3></a>
-		<a href="#"><h3>APS - Atividades praticas supervisionadas</h3></a>
-		<a href="#"><h3>ED - Estudos disciplinares</h3></a>
-		<a href="http://www.unip.br/ead"><h3>EAD - Campo de ensino a distância</h3></a>
-		<!-- COLUNA DIREITA -->
-	</section>
+	
 </div>
 	  <!-- fim conteudo principal -->
 	  <!-- enfeite -->
