--- a/Site Facima/aluno.html
+++ b/Site Facima/aluno.html
@@ -71,17 +71,17 @@
   <li class="dropdown">
     <a href="aluno.html" class="dropbtn" >Aluno</a>
     <div class="dropdown-content" >
-      <a href="#">Atividades de cursos</a>
+      <a href="sub-menu/atividades de cursos.html">Atividades de cursos</a>
       <a href="http://www.unip.br/ead">EAD - Ensino a distância</a>
-      <a href="#">Estágios</a>
+      <a href="sub-menu/estagios.html">Estágios</a>
     </div>
   </li>
   <li class="dropdown">
     <a href="serviços online.html" class="dropbtn" >Serviços Online</a>
     <div class="dropdown-content" >
-      <a href="#">Biblioteca online</a>
+      <a href="http://dualdata.ddns.net:3337/coruja/unass/">Biblioteca online</a>
       <a href="http://sistemasead.unip.br/centralaluno/index.aspx?instituto=facima">Central do aluno</a>
-      <a href="#">Central do professor</a>
+      <a href="sub-menu/centraldo professor.html">Central do professor</a>
     </div>
   </li>
 	  </ul>
@@ -92,13 +92,24 @@
 	  <!-- conteudoprincipal -->
 	  <div id="flex-container">
 	<section class="left-column"><!-- COLUNA ESQUERDA -->
-		<a href="#"><h1>Atividades de curso</h1></a>
+		<a href="sub-menu/atividades de cursos.html"><h1>Atividades de curso</h1></a>
+		<br>
+		<a href="sub-menu/AC.html"><h3>AC - Atividades complementares</h3></a>
+		<a href="sub-menu/APS.html"><h3>APS - Atividades praticas surpevisionadas</h3></a>
+		<a href="sub-menu/ED.html"><h3>ED - Esudos disciplinares</h3></a>
 	</section>
 	<section class="center-column"><!-- COLUNA CENTRO -->
 		<a href="http://www.unip.br/ead"><h1>EAD - Ensino a distância</h1></a>
+		<br>
+		<h3>Materias complementares para finalização do curso, que serão completadas em junção da grade, com professores de outros estados do Brasil</h3>
 	</section>
 	<section class="right-column">
-		<a href="#"><h1>Estágios</h1></a>
+		<a href="sub-menu/estagios.html"><h1>Estágios</h1></a>
+		<br>
+		<a href ="sub-menu/apresentaçao.html"><h3>Apresentação</h3></a>
+		<a href="http://www.facima.edu.br/aluno/arquivos/estagio_obrigatorio.pdf"><h3>Carga horaria obrigatória</h3></a>
+		<a href="http://www.facima.edu.br/aluno/arquivos/empresas_conveniadas_estagio.pdf"><h3>Empresas parceiras</h3></a>
+		<a href="http://www.facima.edu.br/aluno/arquivos/perguntas_estagio.pdf"><h3>Perguntas frequentes</h3></a>
 	</section>
 </div>
 	  <!-- fim conteudo principal -->
