--- a/Site Facima/cursos.html
+++ b/Site Facima/cursos.html
@@ -71,17 +71,17 @@
   <li class="dropdown">
     <a href="aluno.html" class="dropbtn" >Aluno</a>
     <div class="dropdown-content" >
-      <a href="#">Atividades de cursos</a>
+      <a href="sub-menu/atividades de cursos.html">Atividades de cursos</a>
       <a href="http://www.unip.br/ead">EAD - Ensino a distância</a>
-      <a href="#">Estágios</a>
+      <a href="sub-menu/estagios.html">Estágios</a>
     </div>
   </li>
   <li class="dropdown">
     <a href="serviços online.html" class="dropbtn" >Serviços Online</a>
     <div class="dropdown-content" >
-      <a href="#">Biblioteca online</a>
+      <a href="http://dualdata.ddns.net:3337/coruja/unass/">Biblioteca online</a>
       <a href="http://sistemasead.unip.br/centralaluno/index.aspx?instituto=facima">Central do aluno</a>
-      <a href="#">Central do professor</a>
+      <a href="sub-menu/centraldo professor.html">Central do professor</a>
     </div>
   </li>
 	  </ul>
