--- a/Site Facima/sub-menu/atividades de cursos.html
+++ b/Site Facima/sub-menu/atividades de cursos.html
@@ -87,12 +87,19 @@
 	  </div>
 	  <!-- fim menu -->
 	  <!-- informante de pagina -->
-	  <div class="cursos_tradicionais"><a href="cursos tradicionais.html"><h1>Cursos tradicionais</h1></a></div>
+	  <div class="atividades_de_curso"><a href="atividades de cursos.html"><h1>Atividades de curso</h1></a></div>
 	  <!-- conteudoprincipal -->
 	  <div id="flex-container">
 	
 	<section class="center-column"><!-- COLUNA CENTRO -->
-		<h3>fgggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggh</h3>
+		<a href="AC.html"><h3>AC - Atividades complementares</h3></a>
+		<a href="http://www.facima.edu.br/aluno/arquivos/orientacoes_ac_direito.pdf"><h5 class="lol">Regulamento da AC de direito</h5></a>
+		<a href="http://www.facima.edu.br/aluno/arquivos/ac_fisioterapia.docx"><h5 class="lol">Regulamento da AC de fisioterapia</h5></a>
+		<a href="APS.html"><h3>APS - Atividade pratica supervisionada</h3></a>
+		<a href="http://www.facima.edu.br/aluno/arquivos/aps_fisioterapia.docx" class="lol"><h5>Regulamentação da APS de fisioterapia</h5></a>
+		<a href="ED.html"><h3>ED - Estudos disciplina</h3></a>
+		<a href="http://www.facima.edu.br/aluno/arquivos/regulamento_fisioterapia.docx"><h5 class="lol">Regulamentação da ED de fisioterapia</h5></a>
+		
 	</section>
 	
 </div>
