--- a/Site Facima/sub-menu/estagios.html
+++ b/Site Facima/sub-menu/estagios.html
@@ -87,12 +87,18 @@
 	  </div>
 	  <!-- fim menu -->
 	  <!-- informante de pagina -->
-	  <div class="cursos_tradicionais"><a href="cursos tradicionais.html"><h1>Cursos tradicionais</h1></a></div>
+	  <div class="estagios"><a href="estagios.html"><h1>Estágios</h1></a></div>
 	  <!-- conteudoprincipal -->
 	  <div id="flex-container">
 	
 	<section class="center-column"><!-- COLUNA CENTRO -->
-		<h3>fgggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggh</h3>
+		<a href ="apresentaçao.html"><h3>Apresentação</h3></a>
+		<br>
+		<a href="http://www.facima.edu.br/aluno/arquivos/estagio_obrigatorio.pdf"><h3>Carga horaria obrigatória</h3></a>
+		<br>
+		<a href="http://www.facima.edu.br/aluno/arquivos/empresas_conveniadas_estagio.pdf"><h3>Empresas parceiras</h3></a>
+		<br>
+		<a href="http://www.facima.edu.br/aluno/arquivos/perguntas_estagio.pdf"><h3>Perguntas frequentes</h3></a>
 	</section>
 	
 </div>
