--- a/Site Facima/index.html
+++ b/Site Facima/index.html
@@ -70,17 +70,17 @@
   <li class="dropdown">
     <a href="aluno.html" class="dropbtn" >Aluno</a>
     <div class="dropdown-content" >
-      <a href="#">Atividades de cursos</a>
+      <a href="sub-menu/atividades de cursos.html">Atividades de cursos</a>
       <a href="http://www.unip.br/ead">EAD - Ensino a distância</a>
-      <a href="#">Estágios</a>
+      <a href="sub-menu/estagios.html">Estágios</a>
     </div>
   </li>
   <li class="dropdown">
     <a href="serviços online.html" class="dropbtn" >Serviços Online</a>
     <div class="dropdown-content" >
-      <a href="#">Biblioteca online</a>
+      <a href="http://dualdata.ddns.net:3337/coruja/unass/">Biblioteca online</a>
       <a href="http://sistemasead.unip.br/centralaluno/index.aspx?instituto=facima">Central do aluno</a>
-      <a href="#">Central do professor</a>
+      <a href="sub-menu/centraldo professor.html">Central do professor</a>
     </div>
   </li>
 	  </ul>
@@ -104,9 +104,9 @@
 	<section class="right-column">
 		<h1>Atividades de cursos</h1>
 		<br>
-		<a href="#"><h3>AC - Atividades complementares</h3></a>
-		<a href="#"><h3>APS - Atividades praticas supervisionadas</h3></a>
-		<a href="#"><h3>ED - Estudos disciplinares</h3></a>
+		<a href="sub-menu/AC.html"><h3>AC - Atividades complementares</h3></a>
+		<a href="sub-menu/APS.html"><h3>APS - Atividades praticas supervisionadas</h3></a>
+		<a href="sub-menu/ED.html"><h3>ED - Estudos disciplinares</h3></a>
 		<a href="http://www.unip.br/ead"><h3>EAD - Campo de ensino a distância</h3></a>
 		<!-- COLUNA DIREITA -->
 	</section>
