--- a/Site Facima/sub-menu/apresentaçao.html
+++ b/Site Facima/sub-menu/apresentaçao.html
@@ -2,11 +2,10 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Facima Informes</title>
+<title>Facima Cursos tradicionais</title>
  
   
-	<link rel="stylesheet" href="css/index.css">
-	<script type="text/javascript" src="javascript/index.js"></script>
+	<link href="../css/sub-menus.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -16,23 +15,23 @@
   <div class="Back2">
 	  <!-- imagem facima -->
     <div class="img_header"> 
-  <span  class="img_header"><a href="index.html"><img src="Imagens/facima icone.png" alt="Facima logotipo" width="203" height="120"/></a></span>
+  <span  class="img_header"><a href="../index.html"><img src="../Imagens/facima icone.png" alt="Facima logotipo" width="203" height="120"/></a></span>
     </div>
 	  <!-- telefone -->
     <div class="telefone">
-	  <img src="Imagens/telefone-icon.png" width="60" height="60" alt="Telefone"/> 
+	  <img src="../Imagens/telefone-icon.png" width="60" height="60" alt="Telefone"/> 
 	  <h1 class="telefone_numero">(82)3214-2800</h1>
     </div>
 	  <!-- fim telefone -->
 	  <!-- redes sociais -->
     <div class="redes_sociais">
 		  <!--facebook -->
-      <div id="facebook_conteudo"><a href ="https://www.facebook.com/soufacima/"><img src="Imagens/icon-facebook.png" width="40" height="40" alt="Facebook"/>
+      <div id="facebook_conteudo"><a href ="https://www.facebook.com/soufacima/"><img src="../Imagens/icon-facebook.png" width="40" height="40" alt="Facebook"/>
 		  <h2 id="facebook">/soufacima</h2>
       </a></div>
 	    <!--fim facebook -->
 	    <!--instagram -->
-      <div id="instagram_conteudo"><a href ="https://www.instagram.com/facimaoficial/"><img src="Imagens/insta-icon.png" width="55" height="55" alt="Instagram"/>
+      <div id="instagram_conteudo"><a href ="https://www.instagram.com/facimaoficial/"><img src="../Imagens/insta-icon.png" width="55" height="55" alt="Instagram"/>
 		  <h2 id="instagram">@facimaoficial</h2>
       </a></div>
 	    <h3>
@@ -44,24 +43,24 @@
 	    <!-- central do aluno -->
     </h3>
 	  <div class="central_aluno">
-	    <h3><a href="http://sistemasead.unip.br/centralaluno/index.aspx?instituto=facima"><img src="Imagens/layout site facima-Ronaldo.png" width="279" height="114" alt="imagem acesso ao sistema com link para Central do aluno"/></a>
+	    <h3><a href="http://sistemasead.unip.br/centralaluno/index.aspx?instituto=facima"><img src="../Imagens/layout site facima-Ronaldo.png" width="279" height="114" alt="imagem acesso ao sistema com link para Central do aluno"/></a>
         </h3>
       </div>
 	    <!-- fim central do aluno-->
 	  <!-- menu -->
 	  <div class="menu">
 	  <ul>
-  <li><a href="index.html">Início</a></li>
+  <li><a href="../index.html">Início</a></li>
   <li class="dropdown">
-    <a href="cursos.html" class="dropbtn">Cursos</a>
+    <a href="../cursos.html" class="dropbtn">Cursos</a>
     <div class="dropdown-content">
-      <a href="sub-menu/cursos tradicionais.html">Cursos tradicionais</a>
+      <a href="cursos tradicionais.html">Cursos tradicionais</a>
       <a href="#">Cursos da area de tecnologia</a>
       <a href="#">Pós-graduações</a>
     </div>
   </li>
   <li class="dropdown">
-    <a href="informes.html" class="dropbtn">Informes</a>
+    <a href="../informes.html" class="dropbtn">Informes</a>
     <div class="dropdown-content">
       <a href="#">Campus</a>
       <a href="#">Apresentação sobre a facima</a>
@@ -69,41 +68,37 @@
     </div>
   </li>
   <li class="dropdown">
-    <a href="aluno.html" class="dropbtn" >Aluno</a>
+    <a href="../aluno.html" class="dropbtn" >Aluno</a>
     <div class="dropdown-content" >
-      <a href="sub-menu/atividades de cursos.html">Atividades de cursos</a>
+      <a href="atividades de cursos.html">Atividades de cursos</a>
       <a href="http://www.unip.br/ead">EAD - Ensino a distância</a>
-      <a href="sub-menu/estagios.html">Estágios</a>
+      <a href="estagios.html">Estágios</a>
     </div>
   </li>
   <li class="dropdown">
-    <a href="serviços online.html" class="dropbtn" >Serviços Online</a>
+    <a href="../serviços online.html" class="dropbtn" >Serviços Online</a>
     <div class="dropdown-content" >
       <a href="http://dualdata.ddns.net:3337/coruja/unass/">Biblioteca online</a>
       <a href="http://sistemasead.unip.br/centralaluno/index.aspx?instituto=facima">Central do aluno</a>
-      <a href="sub-menu/centraldo professor.html">Central do professor</a>
+      <a href="#">Central do professor</a>
     </div>
   </li>
 	  </ul>
 	  </div>
 	  <!-- fim menu -->
 	  <!-- informante de pagina -->
-	  <div class="informes"><a href="informes.html"><h1>Informes</h1></a></div>
-    <!-- conteudoprincipal -->
+	  <div class="estagios"><a href="estagios.html"><h1>Estágios</h1></a></div>
+	  <!-- conteudoprincipal -->
 	  <div id="flex-container">
-	<section class="left-column"><!-- COLUNA ESQUERDA -->
-		<a href="#"><h1>Campus</h1></a>
-	</section>
+	
 	<section class="center-column"><!-- COLUNA CENTRO -->
-		<a href="#"><h1>Apresentação sobre a facima</h1></a>
+		<h3>Apresentação</h3>
 	</section>
-	<section class="right-column">
-		<a href="#"><h1>Parceiros</h1></a>
-	</section>
+	
 </div>
 	  <!-- fim conteudo principal -->
 	  <!-- enfeite -->
-	  <div class="livro"><img src="Imagens/pilha-livros-2.png" width="126" height="455" alt="Pilha de livros"/>
+	  <div class="livro"><img src="../Imagens/pilha-livros-2.png" width="126" height="455" alt="Pilha de livros"/>
 	  </div>
 	  <!--fim enfeite -->
      </div>
