--- a/Site Facima/index.html
+++ b/Site Facima/index.html
@@ -93,9 +93,9 @@
 		<h1>Foi aprovado?</h1>
 		<a href="http://www.facima.edu.br/vestibular/aprovados/index.asp"><h3>Matricule-se aqui!</h3></a>
 		<br>
-		<a href="#"><h3>Calendário Escolar</h3></a>
+		<h3><a href="http://www.facima.edu.br/aluno/arquivos/calendario_FACIMA.pdf">Calendário Escolar</a></h3>
 		
-        <a href="#"><h3>Minicursos - Baixar Certificados!</h3></a><a href="http://www.facima.edu.br/instituto/eventos.asp"><h3>Eventos</h3></a>
+        <a href="sub-menu/minicursos.html"><h3>Minicursos - Baixar Certificados!</h3></a><a href="http://www.facima.edu.br/instituto/eventos.asp"><h3>Eventos</h3></a>
 	</section>
 	<section class="center-column"><!-- COLUNA CENTRO -->
 		<a href="#"><h1>Conheça o campus</h1></a>
