--- a/Site Facima/sub-menu/minicursos.html
+++ b/Site Facima/sub-menu/minicursos.html
@@ -87,25 +87,36 @@
 	  </div>
 	  <!-- fim menu -->
 	  <!-- informante de pagina -->
-	  <div class="estagios"><a href="estagios.html"><h1>Estágios</h1></a></div>
+	  <div class="estagios"><a href="minicursos.html"><h1>Minicursos</h1></a></div>
 	  <!-- conteudoprincipal -->
 	  <div id="flex-container">
 	
 	<section class="center-column"><!-- COLUNA CENTRO -->
-		<h3>Apresentação</h3>
-		<h3>Professor Me. Aléssio Sandro</h3>
-		<div class="prof"><img src="../Imagens/260717_prof_alessio.jpg" width="111" height="150" alt=""/></div>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<div class="conhecimentos"><h4>Coordenador responsavel pelo encaminhamento dos alunos aos seus respectivos estágios</h4></div>
-		<h4 class="lol">O Estágio na Faculdade da Cidade de Maceió - FACIMA é um instrumento que possibilita a integração do estudante ao mercado de trabalho. Tem como propósito conectar a teoria e a prática no desenvolvimento da vida profissional do estudante, possibilitando seu aperfeiçoamento técnico-cultural, científico e de relacionamento humano.</h4>
-<h4 class="lol">
-  Através das práticas de Estágio há uma aproximação da Faculdade com as empresas, o que possibilita o estabelecimento de um diálogo aberto e levantamento de demandas próprias do ambiente empresarial.</h4>
-		
+		<a href="https://www.doity.com.br/educao-e-valores-humanos"><h5 class="lol">Educação e Valores Humanos </h5></a>
+        <a href="https://www.doity.com.br/mini-curso-identidade-visual"><h5 class="lol">Identidade Visual</h5></a> 
+        <a href="https://www.doity.com.br/brinquedoteca-que-lugar-e-esse"><h5 class="lol">Brinquedoteca: que lugar é esse? </h5></a>
+        <a href="https://doity.com.br/fabricapublicidade"><h5 class="lol">Introdução a fotografia</h5></a> 
+        <a href="https://www.doity.com.br/inteligenciaemocional-x-saude-mental"><h5 class="lol">Inteligência Emocional x Saúde Mmental</h5></a> 
+        <a href="https://doity.com.br/minicursomarketingpessoal"><h5 class="lol">Marketing Pessoal</h5></a>
+        <a href="https://www.doity.com.br/dermocosmeticos"><h5 class="lol">Dermocosméticos </h5></a>  
+        <a href="https://www.doity.com.br/palestrafitocosmetico"><h5 class="lol">Fitocosméticos </h5></a>
+		<a href="https://www.doity.com.br/minicurso-de-logistica"><h5 class="lol">Minicurso de Logística</h5></a>
+        
+		<div class="opa_tio">
+          <a href="https://www.doity.com.br/o-desafio-do-profissional-da-contabilidade"><h5>O Desafio do Profissional da Contabilidade e seus Campos de Atuação no Mercado de Trabalho</h5></a>
+	      <a href="https://www.doity.com.br/janeiro-roxo-facima"><h5>Janeiro Roxo – Juntos, Combatemos a Hanseníase</h5></a> 
+			<a href="https://www.doity.com.br/diversidade-formao-docentes-e-polticas"><h5>Diversidade, Formação Docentes e Políticas</h5></a> 
+			<a href="https://www.doity.com.br/oficina-de-elaborao-de-matriz-swot-pessoal"><h5>Oficina de Elaboração de Matriz Swot Pessoal</h5></a>
+		    <a href="https://www.doity.com.br/workshop-imune-dose"><h5>Workshop Imune Dose - Peeling Fisiológico Rejuvenescedor</h5></a>
+		    <a href="https://doity.com.br/falebem"><h5>Fale Bem em Público</h5></a>
+		    <a href="https://doity.com.br/palestradireito"><h5>O Papel do Operador de Direito Sob Diferentes Aspectos</h5></a> 
+		    <a href="https://doity.com.br/minicursoenfermagem"><h5>Noções Básicas de Enfermagem e Processo de Cuidar</h5></a> 
+		    <a href="https://doity.com.br/mercadodigital"><h5>Por Que entrar no Mundo Digital?</h5></a> 
+		</div>
+		<div class="opa_fion">
+		<a href="https://www.doity.com.br/oficina-de-spot-e-jingle-com-o-prof-marcos-vasconcelos"><h5>Oficina de SPOT e JINGLE</h5></a>
+		<a href="https://doity.com.br/abordagem-clinica-x-abordagem-fisioterapeuta"><h5 >Abordagem Clínica x Abordagem Fisioterapêutica</h5></a>
+		</div>
 	</section>
 	
 </div>
