--- a/Site Facima/aluno.html
+++ b/Site Facima/aluno.html
@@ -56,16 +56,16 @@
     <a href="cursos.html" class="dropbtn">Cursos</a>
     <div class="dropdown-content">
       <a href="sub-menu/cursos tradicionais.html">Cursos tradicionais</a>
-      <a href="#">Cursos da area de tecnologia</a>
-      <a href="#">Pós-graduações</a>
+      <a href="sub-menu/cursostec.html">Cursos da area de tecnologia</a>
+      <a target="_blank" href="http://www.posunip.com.br/cursos/1418-maceio---facima/todos-posicionamentos/todos-modalidades/al/maceio">Pós-graduações</a>
     </div>
   </li>
   <li class="dropdown">
     <a href="informes.html" class="dropbtn">Informes</a>
     <div class="dropdown-content">
-      <a href="#">Campus</a>
-      <a href="#">Apresentação sobre a facima</a>
-      <a href="#">Parceiros</a>
+      <a href="sub-menu/campus.html">Campus</a>
+      <a href="sub-menu/apresentacao.html">Apresentação sobre a facima</a>
+      <a href="sub-menu/parceiros">Parceiros</a>
     </div>
   </li>
   <li class="dropdown">
@@ -79,7 +79,7 @@
   <li class="dropdown">
     <a href="serviços online.html" class="dropbtn" >Serviços Online</a>
     <div class="dropdown-content" >
-      <a href="http://dualdata.ddns.net:3337/coruja/unass/">Biblioteca online</a>
+      <a href="http://www.facima.edu.br/instituto/biblioteca.asp">Biblioteca online</a>
       <a href="http://sistemasead.unip.br/centralaluno/index.aspx?instituto=facima">Central do aluno</a>
       <a href="sub-menu/centraldo professor.html">Central do professor</a>
     </div>
@@ -88,7 +88,8 @@
 	  </div>
 	  <!-- fim menu -->
 	  <!-- informante de pagina -->
-	  <div class="aluno"><a href="aluno.html"><h1>Aluno</h1></a></div>
+	  <div class="aluno"><a href="aluno.html">
+	  <h1>Aluno</h1></a></div>
 	  <!-- conteudoprincipal -->
 	  <div id="flex-container">
 	<section class="left-column"><!-- COLUNA ESQUERDA -->
