--- a/Site Facima/cursos.html
+++ b/Site Facima/cursos.html
@@ -56,16 +56,16 @@
     <a href="cursos.html" class="dropbtn">Cursos</a>
     <div class="dropdown-content">
       <a href="sub-menu/cursos tradicionais.html">Cursos tradicionais</a>
-      <a href="#">Cursos da area de tecnologia</a>
-      <a href="#">Pós-graduações</a>
+      <a href="sub-menu/cursostec.html">Cursos da area de tecnologia</a>
+      <a target="_blank" href="http://www.posunip.com.br/cursos/1418-maceio---facima/todos-posicionamentos/todos-modalidades/al/maceio">Pós-graduações</a>
     </div>
   </li>
   <li class="dropdown">
     <a href="informes.html" class="dropbtn">Informes</a>
     <div class="dropdown-content">
-      <a href="#">Campus</a>
-      <a href="#">Apresentação sobre a facima</a>
-      <a href="#">Parceiros</a>
+      <a href="sub-menu/campus.html">Campus</a>
+      <a href="sub-menu/apresentacao.html">Apresentação sobre a facima</a>
+      <a href="sub-menu/parceiros">Parceiros</a>
     </div>
   </li>
   <li class="dropdown">
@@ -79,7 +79,7 @@
   <li class="dropdown">
     <a href="serviços online.html" class="dropbtn" >Serviços Online</a>
     <div class="dropdown-content" >
-      <a href="http://dualdata.ddns.net:3337/coruja/unass/">Biblioteca online</a>
+      <a href="http://www.facima.edu.br/instituto/biblioteca.asp">Biblioteca online</a>
       <a href="http://sistemasead.unip.br/centralaluno/index.aspx?instituto=facima">Central do aluno</a>
       <a href="sub-menu/centraldo professor.html">Central do professor</a>
     </div>
@@ -93,13 +93,33 @@
 	  <!-- conteudoprincipal -->
 	  <div id="flex-container">
 	<section class="left-column"><!-- COLUNA ESQUERDA -->
-		<a href="sub-menu/cursos tradicionais.html"><h1>Cursos tradicionais</h1></a>
+		<a href="sub-menu/cursos tradicionais.html">
+		<h3>Cursos tradicionais</h3>
+		</a>
+		<h5><a href="sub-menu/adm.html">Administração</a></h5>
+		<h5><a href="sub-menu/cienciacomput.html">Ciência da Computação</a></h5>
+		<h5><a href="sub-menu/cienciacontab.html">Ciências Contábeis</a></h5>
+		<h5><a href="sub-menu/comunicacaosoc.html">Comunicação Social</a></h5>
+		<h5><a href="sub-menu/direito.html">Direito</a></h5>
+		<h5><a href="sub-menu/enferm.html">Enfermagem</a></h5>
+		<h5><a href="sub-menu/engprod.html">Engenharia de Produção</a></h5>
+		<h5><a href="sub-menu/fisio.html">Fisioterapia</a></h5>
+		<h5><a href="sub-menu/nutr.html">Nutrição</a></h5>
+		<h5><a href="sub-menu/pedag.html">Pedagogia</a></h5>
+		<h5><a href="sub-menu/turismo.html">Turismo</a></h5>
 	</section>
 	<section class="center-column"><!-- COLUNA CENTRO -->
-		<a href="#"><h1>Cusos da area de tecnologia</h1></a>
+		<h3><a href="#"></a></h3>
+		<a href="#">
+		<h3>Cursos da area de tecnologia</h3>
+		</a>
+		<h5><a href="sub-menu/estetcosmet.html">Estética e Cosmética</a></h5>
+		<h5><a href="sub-menu/turismo.html">Turismo</a></h5>
 	</section>
 	<section class="right-column">
-		<a href="#"><h1>Pós-graduação</h1></a>
+		      <a target="_blank" href="http://www.posunip.com.br/cursos/1418-maceio---facima/todos-posicionamentos/todos-modalidades/al/maceio">
+		      <h3>Pós-graduação</h3>
+		      </a>
 	</section>
 </div>
 	  <!-- fim conteudo principal -->
