--- a/Site Facima/sub-menu/apresentaçao.html
+++ b/Site Facima/sub-menu/apresentaçao.html
@@ -55,8 +55,8 @@
     <a href="../cursos.html" class="dropbtn">Cursos</a>
     <div class="dropdown-content">
       <a href="cursos tradicionais.html">Cursos tradicionais</a>
-      <a href="#">Cursos da area de tecnologia</a>
-      <a href="#">Pós-graduações</a>
+      <a href="cursostec.html">Cursos da area de tecnologia</a>
+      <a href="http://www.posunip.com.br/cursos/1418-maceio---facima/todos-posicionamentos/todos-modalidades/al/maceio">Pós-graduações</a>
     </div>
   </li>
   <li class="dropdown">
@@ -95,6 +95,7 @@
 		<h3>Apresentação</h3>
 		<h3>Professor Me. Aléssio Sandro</h3>
 		<div class="prof"><img src="../Imagens/260717_prof_alessio.jpg" width="111" height="150" alt=""/></div>
+		<br>
 		<br>
 		<br>
 		<br>
