--- a/Site Facima/sub-menu/campus.html
+++ b/Site Facima/sub-menu/campus.html
@@ -87,24 +87,20 @@
 	  </div>
 	  <!-- fim menu -->
 	  <!-- informante de pagina -->
-	  <div class="atividades_de_curso"><a href="atividades de cursos.html"><h1>Atividades de curso</h1></a></div>
+	  <div class="cursos_tradicionais">
+	    <h1>Campus</h1>
+	  </div>
 	  <!-- conteudoprincipal -->
 	  <div id="flex-container">
 	
 	<section class="center-column"><!-- COLUNA CENTRO -->
-		<h3>ED - Estudo disciplinares</h3>
-		<div class="lol">
-		  <a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_administracao.xls"><h5>Administração</h5></a>
-		  <a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_computacao.xls"><h5>Ciências da computação</h5></a>
-			<a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_direito.xls"><h5>Direito</h5></a>
-			<a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_enfermagem.xls"><h5>Enfermagem</h5></a>
-			<div class="opa"><a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_estetica.xlsx"><h5>Estetica e cosmetica</h5></a>
-			  <a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_fisioterapia.xls"><h5>Fisioterapia</h5></a>
-				<a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_contabeis.xls"><h5>Ciências contabeis</h5></a>
-				<a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_comunicacao_social.xls"><h5>Comunicação social</h5></a></div>
-		</div>
-	     
-		<a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_pedagogia.xls"><h5 class="lol">Pedagogia</h5></a>
+	<h3>Av. Durval de Góes Monteiro, 4.354 - Tabuleiro dos Martins - Maceió/AL
+	PABX: (82) 3214-2800 - Horário de Funcionamento: das 8h às 22h.
+	UNIDADE II - Clínica Escola São Judas Tadeu
+
+	Rua Desportista Carlos Gonzaga Breda Jr. , 05 - Lot. Stella Maris  - Jatiúca - Maceió/AL 
+	Fone: (82) 3326-1038</h3>
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3933.825652749558!2d-35.741703485660786!3d-9.610276093118992!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x701485a9e58a9dd%3A0x309b91709c70814a!2sFaculdade+da+Cidade+de+Macei%C3%B3+-+FACIMA!5e0!3m2!1spt-BR!2sbr!4v1520981096426" width="250" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>
 	</section>
 	
 </div>
