--- a/Site Facima/sub-menu/cursos tradicionais.html
+++ b/Site Facima/sub-menu/cursos tradicionais.html
@@ -55,16 +55,16 @@
     <a href="../cursos.html" class="dropbtn">Cursos</a>
     <div class="dropdown-content">
       <a href="cursos tradicionais.html">Cursos tradicionais</a>
-      <a href="#">Cursos da area de tecnologia</a>
-      <a href="#">Pós-graduações</a>
+      <a href="cursostec.html">Cursos da area de tecnologia</a>
+      <a target="_blank" href="http://www.posunip.com.br/cursos/1418-maceio---facima/todos-posicionamentos/todos-modalidades/al/maceio">Pós-graduações</a>
     </div>
   </li>
   <li class="dropdown">
     <a href="../informes.html" class="dropbtn">Informes</a>
     <div class="dropdown-content">
-      <a href="#">Campus</a>
-      <a href="#">Apresentação sobre a facima</a>
-      <a href="#">Parceiros</a>
+      <a href="campus.html">Campus</a>
+      <a href="apresentacao.html">Apresentação sobre a facima</a>
+      <a href="parceiros">Parceiros</a>
     </div>
   </li>
   <li class="dropdown">
@@ -78,7 +78,7 @@
   <li class="dropdown">
     <a href="../serviços online.html" class="dropbtn" >Serviços Online</a>
     <div class="dropdown-content" >
-      <a href="http://dualdata.ddns.net:3337/coruja/unass/">Biblioteca online</a>
+      <a href="http://www.facima.edu.br/instituto/biblioteca.asp">Biblioteca online</a>
       <a href="http://sistemasead.unip.br/centralaluno/index.aspx?instituto=facima">Central do aluno</a>
       <a href="centraldo professor.html">Central do professor</a>
     </div>
@@ -92,7 +92,17 @@
 	  <div id="flex-container">
 	
 	<section class="center-column"><!-- COLUNA CENTRO -->
-		<h3>fgggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggh</h3>
+		<div class="lol"><h3><a href="adm.html">Administração</a></h3>
+		<h3><a href="cienciacomput.html">Ciência da Computação</a></h3>
+		<h3><a href="cienciacontab.html">Ciências Contábeis</a></h3>
+		<h3><a href="comunicacaosoc.html">Comunicação Social</a></h3>
+		<h3><a href="direito.html">Direito</a></h3>
+		<h3><a href="enferm.html">Enfermagem</a></h3></div>
+		<div class="opa_fion"><h3><a href="engprod.html">Engenharia de Produção</a></h3>
+		<h3><a href="fisio.html">Fisioterapia</a></h3>
+		<h3><a href="nutr.html">Nutrição</a></h3>
+		<h3><a href="pedag.html">Pedagogia</a></h3>
+		<h3><a href="turismo.html">Turismo</a></h3></div>
 	</section>
 	
 </div>
