--- a/Site Facima/index.html
+++ b/Site Facima/index.html
@@ -55,16 +55,16 @@
     <a href="cursos.html" class="dropbtn">Cursos</a>
     <div class="dropdown-content">
       <a href="sub-menu/cursos tradicionais.html">Cursos tradicionais</a>
-      <a href="#">Cursos da area de tecnologia</a>
-      <a href="#">Pós-graduações</a>
+      <a href="sub-menu/cursostec.html">Cursos da area de tecnologia</a>
+      <a target="_blank" href="http://www.posunip.com.br/cursos/1418-maceio---facima/todos-posicionamentos/todos-modalidades/al/maceio">Pós-graduações</a>
     </div>
   </li>
   <li class="dropdown">
     <a href="informes.html" class="dropbtn">Informes</a>
     <div class="dropdown-content">
-      <a href="#">Campus</a>
-      <a href="#">Apresentação sobre a facima</a>
-      <a href="#">Parceiros</a>
+      <a href="sub-menu/campus.html">Campus</a>
+      <a href="sub-menu/apresentacao.html">Apresentação sobre a facima</a>
+      <a href="sub-menu/parceiros">Parceiros</a>
     </div>
   </li>
   <li class="dropdown">
@@ -78,7 +78,7 @@
   <li class="dropdown">
     <a href="serviços online.html" class="dropbtn" >Serviços Online</a>
     <div class="dropdown-content" >
-      <a href="http://dualdata.ddns.net:3337/coruja/unass/">Biblioteca online</a>
+      <a href="http://www.facima.edu.br/instituto/biblioteca.asp">Biblioteca online</a>
       <a href="http://sistemasead.unip.br/centralaluno/index.aspx?instituto=facima">Central do aluno</a>
       <a href="sub-menu/centraldo professor.html">Central do professor</a>
     </div>
@@ -93,12 +93,12 @@
 		<h1>Foi aprovado?</h1>
 		<a href="http://www.facima.edu.br/vestibular/aprovados/index.asp"><h3>Matricule-se aqui!</h3></a>
 		<br>
-		<h3><a href="http://www.facima.edu.br/aluno/arquivos/calendario_FACIMA.pdf">Calendário Escolar</a></h3>
+		<a href="http://www.facima.edu.br/aluno/arquivos/calendario_FACIMA.pdf"><h3>Calendário Escolar</h3></a>
 		
         <a href="sub-menu/minicursos.html"><h3>Minicursos - Baixar Certificados!</h3></a><a href="http://www.facima.edu.br/instituto/eventos.asp"><h3>Eventos</h3></a>
 	</section>
 	<section class="center-column"><!-- COLUNA CENTRO -->
-		<a href="#"><h1>Conheça o campus</h1></a>
+		<a href="sub-menu/campus.html"><h1>Conheça o campus</h1></a>
 		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3933.825652749558!2d-35.741703485660786!3d-9.610276093118992!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x701485a9e58a9dd%3A0x309b91709c70814a!2sFaculdade+da+Cidade+de+Macei%C3%B3+-+FACIMA!5e0!3m2!1spt-BR!2sbr!4v1520981096426" width="300" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
 	</section>
 	<section class="right-column">
