--- a/Site Facima/sub-menu/admnegoc.html
+++ b/Site Facima/sub-menu/admnegoc.html
@@ -87,24 +87,12 @@
 	  </div>
 	  <!-- fim menu -->
 	  <!-- informante de pagina -->
-	  <div class="atividades_de_curso"><a href="atividades de cursos.html"><h1>Atividades de curso</h1></a></div>
+	  <div class="cursos_tradicionais"><a href="cursos tradicionais.html"><h1>Estética e Cosmética</h1></a></div>
 	  <!-- conteudoprincipal -->
 	  <div id="flex-container">
 	
 	<section class="center-column"><!-- COLUNA CENTRO -->
-		<h3>ED - Estudo disciplinares</h3>
-		<div class="lol">
-		  <a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_administracao.xls"><h5>Administração</h5></a>
-		  <a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_computacao.xls"><h5>Ciências da computação</h5></a>
-			<a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_direito.xls"><h5>Direito</h5></a>
-			<a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_enfermagem.xls"><h5>Enfermagem</h5></a>
-			<div class="opa"><a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_estetica.xlsx"><h5>Estetica e cosmetica</h5></a>
-			  <a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_fisioterapia.xls"><h5>Fisioterapia</h5></a>
-				<a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_contabeis.xls"><h5>Ciências contabeis</h5></a>
-				<a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_comunicacao_social.xls"><h5>Comunicação social</h5></a></div>
-		</div>
-	     
-		<a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_pedagogia.xls"><h5 class="lol">Pedagogia</h5></a>
+		<h3>O profissional que se forma no Curso Superior de Tecnologia em Estética e Cosmética da IES torna-se apto a trabalhar em benefício do próximo associando saúde, beleza e bem-estar. Graças a uma formação completa, com os recursos mais modernos, alcança condições de desempenhar suas atividades profissio­nais em centros e clínicas de estética, spas, academias, indústrias cosméticas, domicílios (atendimento home care) e outros estabelecimentos afins. Como é uma área em constante desenvolvimento, o curso permite a troca de informações com outros profissionais da área de saúde que, direta ou indiretamente, atuam na área da estética humana e interagem nos tratamentos específicos.</h3>
 	</section>
 	
 </div>
