--- a/Site Facima/sub-menu/cienciacomput.html
+++ b/Site Facima/sub-menu/cienciacomput.html
@@ -87,24 +87,14 @@
 	  </div>
 	  <!-- fim menu -->
 	  <!-- informante de pagina -->
-	  <div class="atividades_de_curso"><a href="atividades de cursos.html"><h1>Atividades de curso</h1></a></div>
+	  <div class="cursos_tradicionais">
+	    <h1>Ciência da Computação</h1>
+	  </div>
 	  <!-- conteudoprincipal -->
 	  <div id="flex-container">
 	
 	<section class="center-column"><!-- COLUNA CENTRO -->
-		<h3>ED - Estudo disciplinares</h3>
-		<div class="lol">
-		  <a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_administracao.xls"><h5>Administração</h5></a>
-		  <a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_computacao.xls"><h5>Ciências da computação</h5></a>
-			<a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_direito.xls"><h5>Direito</h5></a>
-			<a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_enfermagem.xls"><h5>Enfermagem</h5></a>
-			<div class="opa"><a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_estetica.xlsx"><h5>Estetica e cosmetica</h5></a>
-			  <a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_fisioterapia.xls"><h5>Fisioterapia</h5></a>
-				<a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_contabeis.xls"><h5>Ciências contabeis</h5></a>
-				<a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_comunicacao_social.xls"><h5>Comunicação social</h5></a></div>
-		</div>
-	     
-		<a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_pedagogia.xls"><h5 class="lol">Pedagogia</h5></a>
+		<h3>O curso de Ciência da Computação forma seus alunos unindo os conceitos teóricos com a prática cotidiana, a fim de desenvolverem e adaptarem sistemas de programação, projetando e desenvolvendo softwares básicos. O curso oferece todo o espectro do conhecimento lógico que é imprescindível para o desenvolvimento de empresas e negócios em todas as áreas do conhecimento humano, de forma ampla, incluindo diferentes trabalhos práticos que envolvem os aspectos científicos, com o desenvolvimento e adaptação de sistemas importados, processamento de dados científicos e técnicos e criação de novas linguagens de programação e novas arquiteturas de softwares.</h3>
 	</section>
 	
 </div>
