--- a/Site Facima/sub-menu/cienciacontab.html
+++ b/Site Facima/sub-menu/cienciacontab.html
@@ -87,24 +87,14 @@
 	  </div>
 	  <!-- fim menu -->
 	  <!-- informante de pagina -->
-	  <div class="atividades_de_curso"><a href="atividades de cursos.html"><h1>Atividades de curso</h1></a></div>
+	  <div class="cursos_tradicionais">
+	    <h1>Ciências Contábeis</h1>
+	  </div>
 	  <!-- conteudoprincipal -->
 	  <div id="flex-container">
 	
 	<section class="center-column"><!-- COLUNA CENTRO -->
-		<h3>ED - Estudo disciplinares</h3>
-		<div class="lol">
-		  <a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_administracao.xls"><h5>Administração</h5></a>
-		  <a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_computacao.xls"><h5>Ciências da computação</h5></a>
-			<a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_direito.xls"><h5>Direito</h5></a>
-			<a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_enfermagem.xls"><h5>Enfermagem</h5></a>
-			<div class="opa"><a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_estetica.xlsx"><h5>Estetica e cosmetica</h5></a>
-			  <a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_fisioterapia.xls"><h5>Fisioterapia</h5></a>
-				<a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_contabeis.xls"><h5>Ciências contabeis</h5></a>
-				<a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_comunicacao_social.xls"><h5>Comunicação social</h5></a></div>
-		</div>
-	     
-		<a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_pedagogia.xls"><h5 class="lol">Pedagogia</h5></a>
+		<h3>O curso de Ciências Contábeis habilita seus alunos a exercer as atividades de regulamentação de todos os fatos relativos ao patrimônio das instituições. Adotando um sistema de processamento de dados, ele é responsável pelo controle contábil e orçamentário das empresas. São profissionais aptos a desenvolver, da melhor maneira, as atividades em sua área de atuação, o que inclui planejamento, organização, orientação e preparação das demonstrações contábeis, essenciais a uma empresa. Graças a um conteúdo desenvolvido que une as teorias com as práticas cotidianas, ressalta-se a experiência necessária para que o futuro Contador analise as despesas e custos a fim de avaliar o valor de bens e serviços, preparar e fundamentar a declaração do imposto de renda da empresa para calcular o valor do tributo devido.</h3>
 	</section>
 	
 </div>
