--- a/Site Facima/sub-menu/comunicacaosoc.html
+++ b/Site Facima/sub-menu/comunicacaosoc.html
@@ -87,24 +87,14 @@
 	  </div>
 	  <!-- fim menu -->
 	  <!-- informante de pagina -->
-	  <div class="atividades_de_curso"><a href="atividades de cursos.html"><h1>Atividades de curso</h1></a></div>
+	  <div class="cursos_tradicionais">
+	    <h1>Comunicação Social</h1>
+	  </div>
 	  <!-- conteudoprincipal -->
 	  <div id="flex-container">
 	
 	<section class="center-column"><!-- COLUNA CENTRO -->
-		<h3>ED - Estudo disciplinares</h3>
-		<div class="lol">
-		  <a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_administracao.xls"><h5>Administração</h5></a>
-		  <a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_computacao.xls"><h5>Ciências da computação</h5></a>
-			<a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_direito.xls"><h5>Direito</h5></a>
-			<a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_enfermagem.xls"><h5>Enfermagem</h5></a>
-			<div class="opa"><a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_estetica.xlsx"><h5>Estetica e cosmetica</h5></a>
-			  <a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_fisioterapia.xls"><h5>Fisioterapia</h5></a>
-				<a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_contabeis.xls"><h5>Ciências contabeis</h5></a>
-				<a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_comunicacao_social.xls"><h5>Comunicação social</h5></a></div>
-		</div>
-	     
-		<a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_pedagogia.xls"><h5 class="lol">Pedagogia</h5></a>
+		<h3>O curso de Comunicação Social com habilitação em Publicidade e Propaganda enfatiza a criação de anúncios para serem veiculados nos diversos meios e veículos de comunicação, como televisão, rádio, revistas, outdoors, mídias sociais, material promocional e de ponto de venda, sempre apoiados no potencial criativo. O aluno recebe informações no âmbito cultural, o que o habilita a ter uma visão ampla e crítica da realidade social e de seu cotidiano. De posse dessa visão, o curso torna-se prático, garantindo a aplicação dos conhecimentos às exigências do mercado e às situações encontradas na vida profissional. O perfil do profissional dessa área é delineado pela criatividade, o que o capacita a desenvolver, com habilidade, projetos pertinentes a diversas atividades da publicidade e propaganda.</h3>
 	</section>
 	
 </div>
