--- a/Site Facima/sub-menu/direito.html
+++ b/Site Facima/sub-menu/direito.html
@@ -87,24 +87,14 @@
 	  </div>
 	  <!-- fim menu -->
 	  <!-- informante de pagina -->
-	  <div class="atividades_de_curso"><a href="atividades de cursos.html"><h1>Atividades de curso</h1></a></div>
+	  <div class="cursos_tradicionais">
+	    <h1>Direito</h1>
+	  </div>
 	  <!-- conteudoprincipal -->
 	  <div id="flex-container">
 	
 	<section class="center-column"><!-- COLUNA CENTRO -->
-		<h3>ED - Estudo disciplinares</h3>
-		<div class="lol">
-		  <a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_administracao.xls"><h5>Administração</h5></a>
-		  <a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_computacao.xls"><h5>Ciências da computação</h5></a>
-			<a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_direito.xls"><h5>Direito</h5></a>
-			<a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_enfermagem.xls"><h5>Enfermagem</h5></a>
-			<div class="opa"><a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_estetica.xlsx"><h5>Estetica e cosmetica</h5></a>
-			  <a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_fisioterapia.xls"><h5>Fisioterapia</h5></a>
-				<a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_contabeis.xls"><h5>Ciências contabeis</h5></a>
-				<a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_comunicacao_social.xls"><h5>Comunicação social</h5></a></div>
-		</div>
-	     
-		<a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_pedagogia.xls"><h5 class="lol">Pedagogia</h5></a>
+		<h3>O curso de Direito prepara o aluno dando-lhe uma formação multidisciplinar, de tal forma que, ao atingir o bacharelado, estará apto a exercer tanto a advocacia privada como profissional liberal, trabalhando em empresas ou escritórios, como também a atuar na área de consultoria ou, ainda, a entrar para a carreira jurídica pública como delegado de polícia, juiz de Direito, promotor público, advogado ou defensor público, entre outras. O curso também proporciona aos gestores públicos e privados uma enormidade de conhecimento que os qualifica a acrescer em currículo e conhecimento normativo voltado a uma gestão mais ampla e diferenciada. É um curso amplo, que exige bastante leitura, aquisição de cultura geral, exercício de memória, rapidez de raciocínio, elevado grau de associação, análise e coordenação de ideias, tudo voltado para a defesa do interesses coletivos e individuais. Outro diferencial do curso é seu Núcleo de Prática Jurídica com convênios com Tribunais, Ministério Público, OAB e inúmeros órgãos públicos e privados, além do seu próprio Escritório de Assistência Jurídica onde o acadêmico terá vários tipos de ambientes práticos jurídicos para prepará-lo para o mundo profissional. </h3>
 	</section>
 	
 </div>
