--- a/Site Facima/sub-menu/enferm.html
+++ b/Site Facima/sub-menu/enferm.html
@@ -87,24 +87,14 @@
 	  </div>
 	  <!-- fim menu -->
 	  <!-- informante de pagina -->
-	  <div class="atividades_de_curso"><a href="atividades de cursos.html"><h1>Atividades de curso</h1></a></div>
+	  <div class="cursos_tradicionais">
+	    <h1>Enfermagem</h1>
+	  </div>
 	  <!-- conteudoprincipal -->
 	  <div id="flex-container">
 	
 	<section class="center-column"><!-- COLUNA CENTRO -->
-		<h3>ED - Estudo disciplinares</h3>
-		<div class="lol">
-		  <a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_administracao.xls"><h5>Administração</h5></a>
-		  <a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_computacao.xls"><h5>Ciências da computação</h5></a>
-			<a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_direito.xls"><h5>Direito</h5></a>
-			<a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_enfermagem.xls"><h5>Enfermagem</h5></a>
-			<div class="opa"><a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_estetica.xlsx"><h5>Estetica e cosmetica</h5></a>
-			  <a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_fisioterapia.xls"><h5>Fisioterapia</h5></a>
-				<a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_contabeis.xls"><h5>Ciências contabeis</h5></a>
-				<a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_comunicacao_social.xls"><h5>Comunicação social</h5></a></div>
-		</div>
-	     
-		<a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_pedagogia.xls"><h5 class="lol">Pedagogia</h5></a>
+		<h3>O Curso de Graduação em Enfermagem tem como perfil o formando egresso/profissional com formação generalista, humanista, crítica e reflexiva; o profissional qualificado para o exercício de Enfermagem, com base no rigor científico e intelectual e pautado em princípios éticos, capaz de conhecer e intervir em problemas/situações de saúde-doença mais prevalentes no perfil epidemiológico nacional, com ênfase na sua região de atuação, identificando as dimensões bio-psico-sociais dos seus determinantes; capacitado a atuar, com senso de responsabilidade social e compromisso com a cidadania, como promotor da saúde integral do ser humano. A formação do Enfermeiro tem por objetivo dotar o profissional dos conhecimentos requeridos para o exercício das seguintes competências e habilidades gerais: atenção à saúde, tomada de decisões, comunicação, liderança, administração e gerenciamento, educação permanente. </h3>
 	</section>
 	
 </div>
