--- a/Site Facima/sub-menu/engprod.html
+++ b/Site Facima/sub-menu/engprod.html
@@ -87,24 +87,16 @@
 	  </div>
 	  <!-- fim menu -->
 	  <!-- informante de pagina -->
-	  <div class="atividades_de_curso"><a href="atividades de cursos.html"><h1>Atividades de curso</h1></a></div>
+	  <div class="cursos_tradicionais">
+	    <h1>Engenharia de Produção</h1>
+	  </div>
 	  <!-- conteudoprincipal -->
 	  <div id="flex-container">
 	
 	<section class="center-column"><!-- COLUNA CENTRO -->
-		<h3>ED - Estudo disciplinares</h3>
-		<div class="lol">
-		  <a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_administracao.xls"><h5>Administração</h5></a>
-		  <a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_computacao.xls"><h5>Ciências da computação</h5></a>
-			<a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_direito.xls"><h5>Direito</h5></a>
-			<a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_enfermagem.xls"><h5>Enfermagem</h5></a>
-			<div class="opa"><a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_estetica.xlsx"><h5>Estetica e cosmetica</h5></a>
-			  <a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_fisioterapia.xls"><h5>Fisioterapia</h5></a>
-				<a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_contabeis.xls"><h5>Ciências contabeis</h5></a>
-				<a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_comunicacao_social.xls"><h5>Comunicação social</h5></a></div>
-		</div>
-	     
-		<a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_pedagogia.xls"><h5 class="lol">Pedagogia</h5></a>
+		<h3>O curso de Engenharia de Produção propicia uma abordagem apropriada às constantes mudanças provenientes do desenvolvimento tecnológico. O ambiente global de negócios tornou o controle dos custos e da qualidade dos produtos imprescindível. A contínua evolução dos sistemas de comunicação contribuiu para a rapidez na análise das informações e para um aumento na velocidade da inovação, tanto a dos processos como a dos produtos. Neste contexto, o curso de Engenharia de Produção estuda e analisa a interação de pessoas, materiais, equipamentos, métodos e processos, o que proporciona ao profissional possibilidade de atuação nos diversos níveis das empresas. O engenheiro de produção deve apresentar uma visão integrada das áreas tecnológica, administrativa e financeira, trabalhando tanto no setor produtivo quanto no administrativo, supervisionando a gestão da produção e participando de forma ativa na gestão econômico-financeira e na tomada de decisões estratégicas.
+Assim, o profissional formado pela Instituição tem os conhecimentos básicos de Engenharia e uma formação específica que o capacita a otimizar a produção, racionalizar métodos, processos e sistemas, com o intuito de melhoria da produtividade, por meio das disciplinas de gestão financeira e das que dizem respeito à dinâmica dos mercados e ao surgimento de novos produtos e processos, além das disciplinas que permitem domínio dos métodos quantitativos (matemática, estatística etc).
+Num mundo caracterizado pelo risco e pela incerteza crescentes, a atuação do Engenheiro de Produção é útil sempre que houver necessidade de planejamento, coordenação e controle, visando à qualidade e à racionalização na produção.</h3>
 	</section>
 	
 </div>
