--- a/Site Facima/sub-menu/minicursos.html
+++ b/Site Facima/sub-menu/minicursos.html
@@ -55,16 +55,16 @@
     <a href="../cursos.html" class="dropbtn">Cursos</a>
     <div class="dropdown-content">
       <a href="cursos tradicionais.html">Cursos tradicionais</a>
-      <a href="#">Cursos da area de tecnologia</a>
-      <a href="#">Pós-graduações</a>
+      <a href="cursostec.html">Cursos da area de tecnologia</a>
+      <a href="http://www.posunip.com.br/cursos/1418-maceio---facima/todos-posicionamentos/todos-modalidades/al/maceio">Pós-graduações</a>
     </div>
   </li>
   <li class="dropdown">
     <a href="../informes.html" class="dropbtn">Informes</a>
     <div class="dropdown-content">
-      <a href="#">Campus</a>
-      <a href="#">Apresentação sobre a facima</a>
-      <a href="#">Parceiros</a>
+      <a href="campus.html">Campus</a>
+      <a href="apresentacao.html">Apresentação sobre a facima</a>
+      <a href="http://www.espacogerencial.com.br/">Parceiros</a>
     </div>
   </li>
   <li class="dropdown">
@@ -102,7 +102,7 @@
         <a href="https://www.doity.com.br/palestrafitocosmetico"><h5 class="lol">Fitocosméticos </h5></a>
 		<a href="https://www.doity.com.br/minicurso-de-logistica"><h5 class="lol">Minicurso de Logística</h5></a>
         
-		<div class="opa_tio">
+		<div class="opa_fion">
           <a href="https://www.doity.com.br/o-desafio-do-profissional-da-contabilidade"><h5>O Desafio do Profissional da Contabilidade e seus Campos de Atuação no Mercado de Trabalho</h5></a>
 	      <a href="https://www.doity.com.br/janeiro-roxo-facima"><h5>Janeiro Roxo – Juntos, Combatemos a Hanseníase</h5></a> 
 			<a href="https://www.doity.com.br/diversidade-formao-docentes-e-polticas"><h5>Diversidade, Formação Docentes e Políticas</h5></a> 
@@ -113,7 +113,7 @@
 		    <a href="https://doity.com.br/minicursoenfermagem"><h5>Noções Básicas de Enfermagem e Processo de Cuidar</h5></a> 
 		    <a href="https://doity.com.br/mercadodigital"><h5>Por Que entrar no Mundo Digital?</h5></a> 
 		</div>
-		<div class="opa_fion">
+		<div class="opa">
 		<a href="https://www.doity.com.br/oficina-de-spot-e-jingle-com-o-prof-marcos-vasconcelos"><h5>Oficina de SPOT e JINGLE</h5></a>
 		<a href="https://doity.com.br/abordagem-clinica-x-abordagem-fisioterapeuta"><h5 >Abordagem Clínica x Abordagem Fisioterapêutica</h5></a>
 		</div>
