--- a/Site Facima/sub-menu/nutr.html
+++ b/Site Facima/sub-menu/nutr.html
@@ -48,7 +48,7 @@
       </div>
 	    <!-- fim central do aluno-->
 	  <!-- menu -->
-	  <div class="menu">
+	 <div class="menu">
 	  <ul>
   <li><a href="../index.html">Início</a></li>
   <li class="dropdown">
@@ -87,24 +87,14 @@
 	  </div>
 	  <!-- fim menu -->
 	  <!-- informante de pagina -->
-	  <div class="atividades_de_curso"><a href="atividades de cursos.html"><h1>Atividades de curso</h1></a></div>
+	  <div class="cursos_tradicionais">
+	    <h1>Nutrição</h1>
+	  </div>
 	  <!-- conteudoprincipal -->
 	  <div id="flex-container">
 	
 	<section class="center-column"><!-- COLUNA CENTRO -->
-		<h3>ED - Estudo disciplinares</h3>
-		<div class="lol">
-		  <a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_administracao.xls"><h5>Administração</h5></a>
-		  <a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_computacao.xls"><h5>Ciências da computação</h5></a>
-			<a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_direito.xls"><h5>Direito</h5></a>
-			<a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_enfermagem.xls"><h5>Enfermagem</h5></a>
-			<div class="opa"><a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_estetica.xlsx"><h5>Estetica e cosmetica</h5></a>
-			  <a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_fisioterapia.xls"><h5>Fisioterapia</h5></a>
-				<a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_contabeis.xls"><h5>Ciências contabeis</h5></a>
-				<a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_comunicacao_social.xls"><h5>Comunicação social</h5></a></div>
-		</div>
-	     
-		<a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_pedagogia.xls"><h5 class="lol">Pedagogia</h5></a>
+		<h3>O curso de Nutrição engloba um conjunto de conhecimentos ligados às ciências biológicas, como a Fisiologia, a Bioquímica e a Biologia, com o objetivo de desenvolver a consciência da saúde humana a partir do consumo dos alimentos essenciais à sua preservação. A formação integral do Nutricionista também está intimamente relacionada às ciências comportamentais e humanas, tais como a Sociologia, Antropologia, Economia e Psicologia, de modo que é um curso de grande amplitude de saberes que une as teorias das diferentes ciências com as práticas, de modo multidisciplinar.</h3>
 	</section>
 	
 </div>
