--- a/Site Facima/sub-menu/pedag.html
+++ b/Site Facima/sub-menu/pedag.html
@@ -87,24 +87,15 @@
 	  </div>
 	  <!-- fim menu -->
 	  <!-- informante de pagina -->
-	  <div class="atividades_de_curso"><a href="atividades de cursos.html"><h1>Atividades de curso</h1></a></div>
+	  <div class="cursos_tradicionais">
+	    <h1>Pedagogia</h1>
+	  </div>
 	  <!-- conteudoprincipal -->
 	  <div id="flex-container">
 	
 	<section class="center-column"><!-- COLUNA CENTRO -->
-		<h3>ED - Estudo disciplinares</h3>
-		<div class="lol">
-		  <a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_administracao.xls"><h5>Administração</h5></a>
-		  <a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_computacao.xls"><h5>Ciências da computação</h5></a>
-			<a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_direito.xls"><h5>Direito</h5></a>
-			<a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_enfermagem.xls"><h5>Enfermagem</h5></a>
-			<div class="opa"><a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_estetica.xlsx"><h5>Estetica e cosmetica</h5></a>
-			  <a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_fisioterapia.xls"><h5>Fisioterapia</h5></a>
-				<a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_contabeis.xls"><h5>Ciências contabeis</h5></a>
-				<a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_comunicacao_social.xls"><h5>Comunicação social</h5></a></div>
-		</div>
-	     
-		<a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_pedagogia.xls"><h5 class="lol">Pedagogia</h5></a>
+		<h3>O profissional licenciado em Pedagogia encontra-se apto a atuar em ambientes escolares e não escolares. O curso oferece componentes curriculares que garantem ao estudante uma formação científico-cultural e didático-pedagógica com vistas a qualificá-lo para atuar, prioritariamente, na docência da Educação Infantil e dos anos iniciais do Ensino Fundamental (1º ao 5º ano). 
+Além da docência, o curso de Pedagogia habilita profissionais para o exercício da gestão educacional e escolar (Diretor de Escola), Supervisão de Ensino, Orientação Educacional, Coordenação Pedagógica e em outras áreas de ação do pedagogo (ambiente não escolar), principalmente, em Organizações Não Governamentais e Empresas públicas e privadas nas áreas de educação corporativa e recursos humanos.</h3>
 	</section>
 	
 </div>
