--- a/Site Facima/sub-menu/turismo.html
+++ b/Site Facima/sub-menu/turismo.html
@@ -87,24 +87,14 @@
 	  </div>
 	  <!-- fim menu -->
 	  <!-- informante de pagina -->
-	  <div class="atividades_de_curso"><a href="atividades de cursos.html"><h1>Atividades de curso</h1></a></div>
+	  <div class="cursos_tradicionais">
+	    <h1>Turismo</h1>
+	  </div>
 	  <!-- conteudoprincipal -->
 	  <div id="flex-container">
 	
 	<section class="center-column"><!-- COLUNA CENTRO -->
-		<h3>ED - Estudo disciplinares</h3>
-		<div class="lol">
-		  <a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_administracao.xls"><h5>Administração</h5></a>
-		  <a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_computacao.xls"><h5>Ciências da computação</h5></a>
-			<a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_direito.xls"><h5>Direito</h5></a>
-			<a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_enfermagem.xls"><h5>Enfermagem</h5></a>
-			<div class="opa"><a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_estetica.xlsx"><h5>Estetica e cosmetica</h5></a>
-			  <a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_fisioterapia.xls"><h5>Fisioterapia</h5></a>
-				<a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_contabeis.xls"><h5>Ciências contabeis</h5></a>
-				<a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_comunicacao_social.xls"><h5>Comunicação social</h5></a></div>
-		</div>
-	     
-		<a href="http://www.facima.edu.br/aluno/arquivos/formulario_ed_pedagogia.xls"><h5 class="lol">Pedagogia</h5></a>
+		<h3>O curso de Turismo forma profissionais para atuar no mercado de turismo em diversos tipos de atividades como prestação de serviços em hospedagem, transportes, agenciamentos, eventos, alimentação, recreação, gastronomia, planejamento e pesquisa. Habilita o aluno de Turismo a exercer, de forma competente e profissional, atividades ligadas ao planejamento, organização, gerenciamento e execução de ações que envolvem áreas diversas do turismo, sempre com o intuito de fornecer aos turistas um ambiente hospitaleiro e acolhedor, visando sua plena satisfação. Possibilita, ainda, ao aluno conhecer o funcionamento e a complexidade de toda a cadeia produtiva do turismo, levando-o a perceber a dimensão dos ambientes em que está inserido. Essas são tarefas complexas que exigem a atuação de profissionais especializados, com conhecimento e formação para a área – os Bacharéis em Turismo.</h3>
 	</section>
 	
 </div>
